complete footer template and add social media links with svg icons

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- the backup font here is ridiculous, just for testing -->
     <link
@@ -29,7 +28,7 @@
     -->
     <title>Rainier Elixirs</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
